err/sketchbook.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiofiles'...
Listing './lib/python3.5/site-packages/aiofiles/threadpool'...
Listing './lib/python3.5/site-packages/aiofiles-0.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytest_runner-2.12.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sketchbook'...
Compiling './lib/python3.5/site-packages/sketchbook/_version.py'...
***   File "./lib/python3.5/site-packages/sketchbook/_version.py", line 27
    _version_fragments.append(f"dev{_dev}")
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/escaping.py'...
***   File "./lib/python3.5/site-packages/sketchbook/escaping.py", line 31
    (f"The content({unsafe_str!r}) subject for html "
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/finders.py'...
***   File "./lib/python3.5/site-packages/sketchbook/finders.py", line 48
    self._skt_cache: Dict[str, sketch.Sketch] = {}
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/parser.py'...
***   File "./lib/python3.5/site-packages/sketchbook/parser.py", line 47
    self._indents: List[statements.IndentMixIn] = []
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/printer.py'...
***   File "./lib/python3.5/site-packages/sketchbook/printer.py", line 52
    line += f"  # in file {self._path} at line {stmt.line_no}."
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/runtime.py'...
***   File "./lib/python3.5/site-packages/sketchbook/runtime.py", line 53
    self._skt_rt: SketchRuntime
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/statements.py'...
***   File "./lib/python3.5/site-packages/sketchbook/statements.py", line 82
    self._stmts: List[AppendMixIn] = []
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sketchbook/testutils.py'...
***   File "./lib/python3.5/site-packages/sketchbook/testutils.py", line 29
    self._loop: Optional[asyncio.AbstractEventLoop] = None
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sketchbook-0.1.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
